# i-orca

./: .gitignore  .mcp.json  AGENTS.md  GETTING_STARTED.md  README.md  SPEC.md  pyproject.toml
docs/: grammar.md  mcp.md  verifier-backend-metrics.md
examples/bitnet/: BalancedTernary.thy  BitWidth.thy  Lossless.thy  PROPOSAL.md  README.md  RESULTS.md  ROOT  Ternary.thy  bitnet.i.orca.md
examples/complexity/: Density.thy  Density_Minimization.thy  Hardness.thy  Hardness_RouteB.thy  Hub.thy  MarginBridge.thy  MinimalDecider.thy  PROPOSAL.md  README.md  ROOT  complexity.i.orca.md  hardness.i.orca.md
examples/fieldrun/: RESULTS.md  fieldrun.i.orca.md
examples/jl/: Examples.thy  JLDimension.thy  JLExistence.thy  JLProjection.thy  PROPOSAL.md  README.md  RESULTS.md  ROOT  jl.i.orca.md
examples/pic_core/: PIC_Core.thy  PIC_Forward.thy  PIC_Interference.thy  PIC_Logic.thy  ROOT
examples/pic_krein/: KreinBottomK.thy  KreinDecode.thy  KreinPrecond.thy  KreinTernary.thy  KreinWelch.thy  LEARNED_J.md  PIC_Prune.thy  PIC_Quant.thy  PROPOSAL.md  PRUNE.md  QUANT.md  README.md  RESULTS.md  ROOT  SCHEME_A.md  TERNARY.md  pic_krein.i.orca.md
examples/provable_opt/: ProvableOpt.thy  ProvableOpt_Checker.thy  ProvableOpt_Checker_Surface.thy  ProvableOpt_Common.thy  ProvableOpt_Datalog.thy  ProvableOpt_Datalog_Surface.thy  ProvableOpt_Margin.thy  ProvableOpt_Margin_Surface.thy  ProvableOpt_Surface.thy  README.md  RESULTS.md  (+5 more)
i_orca/: __init__.py  ast.py  cli.py  mcp_server.py  metrics.py  tools.py
openspec/: project.md
tests/: conftest.py  test_backend_metrics.py  test_check_sessions.py  test_cli_mcp.py  test_compiler.py  test_fieldrun.py  test_parser.py  test_verifier.py
(+108 files in other folders)
